--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-weight: bold;
-  
+
 }
 
 p {
@@ -21,7 +21,7 @@ p {
 form {
   margin-bottom: 25px;
   padding: 15px;
-  background-color: #87D37C;
+  background-color: #eee0e0;
   display: inline-block;
   width: 100%;
   max-width: 340px;
@@ -35,20 +35,21 @@ input {
   width: 100%;
   border: 1px solid lightgrey;
   border-radius: 3px;
+  box-shadow: -1px -1px #999;
   font-size: 16px;
 }
 
 input[type=submit] {
   font-size: 16px;
   border-radius: 3px;
-  background-color: #E4F1FE;
+  background-color: #efeffe;
   border: 1px solid grey;
   box-shadow: 2px 2px #999;
   cursor: pointer;
 }
 
 input[type=submit]:hover {
-  background-color: #FFFEC4;
+  background-color: #dedefe;
 }
 
 code {
